@@ -1,7 +1,7 @@
 SEQUEL = (<<-SEQUEL) unless defined?(SEQUEL)
 Sequel::Model.plugin(:schema)
 Sequel::Model.raise_on_save_failure = false # Do not throw exceptions on failure
-DB = case Padrino.env
+Sequel::Model.db = case Padrino.env
   when :development then Sequel.connect(!DB_DEVELOPMENT!, :loggers => [logger])
   when :production  then Sequel.connect(!DB_PRODUCTION!,  :loggers => [logger])
   when :test        then Sequel.connect(!DB_TEST!,        :loggers => [logger])
