@@ -5,8 +5,8 @@ if defined?(Sequel)
       desc "Perform automigration (reset your db data)"
       task :auto => :environment do
         ::Sequel.extension :migration
-        ::Sequel::Migrator.run DB, "db/migrate", :target => 0
-        ::Sequel::Migrator.run DB, "db/migrate"
+        ::Sequel::Migrator.run Sequel::Model.db, "db/migrate", :target => 0
+        ::Sequel::Migrator.run Sequel::Model.db, "db/migrate"
         puts "<= sq:migrate:auto executed"
       end
 
@@ -15,21 +15,21 @@ if defined?(Sequel)
         version = (args[:version] || ENV['VERSION']).to_s.strip
         ::Sequel.extension :migration
         raise "No VERSION was provided" if version.empty?
-        ::Sequel::Migrator.apply(DB, "db/migrate", version.to_i)
+        ::Sequel::Migrator.apply(Sequel::Model.db, "db/migrate", version.to_i)
         puts "<= sq:migrate:to[#{version}] executed"
       end
 
       desc "Perform migration up to latest migration available"
       task :up => :environment do
         ::Sequel.extension :migration
-        ::Sequel::Migrator.run DB, "db/migrate"
+        ::Sequel::Migrator.run Sequel::Model.db, "db/migrate"
         puts "<= sq:migrate:up executed"
       end
 
       desc "Perform migration down (erase all data)"
       task :down => :environment do
         ::Sequel.extension :migration
-        ::Sequel::Migrator.run DB, "db/migrate", :target => 0
+        ::Sequel::Migrator.run Sequel::Model.db, "db/migrate", :target => 0
         puts "<= sq:migrate:down executed"
       end
     end
